@@ -28,11 +28,11 @@
 		<artifactId>oss-parent</artifactId>
 		<version>7</version>
 	</parent>
-	<groupId>com.github.sirixdb.sirix</groupId>
+	<groupId>io.sirix</groupId>
 	<artifactId>sirix-parent</artifactId>
 	<packaging>pom</packaging>
 	<name>sirix-complete</name>
-	<version>0.9.0-SNAPSHOT</version>
+	<version>0.8.9-SNAPSHOT</version>
 	<description>Sirix is a temporal storage system effectively and efficiently storing snapshots of
 	time varying (currently semi-structured) data taking full advantage of flash based drives as for
 	instance SSDs. We not only provide several ways of navigating the tree-structure of a single
@@ -115,11 +115,20 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.19.1</version>
-				<!-- <dependencies> <dependency> <groupId>org.junit.platform</groupId> 
-					<artifactId>junit-platform-surefire-provider</artifactId> <version>1.1.0</version> 
-					</dependency> <dependency> <groupId>org.junit.jupiter</groupId> <artifactId>junit-jupiter-engine</artifactId> 
-					<version>5.1.0</version> </dependency> </dependencies> -->
+				<version>2.22.0</version>
+				<configuration>
+                     <argLine>--illegal-access=permit</argLine>
+                </configuration>
+			</plugin>
+			<plugin>
+			    <groupId>org.apache.maven.plugins</groupId>
+			    <artifactId>maven-failsafe-plugin</artifactId>
+			    <version>2.22.0</version>
+			    <configuration>
+			        <argLine>
+			            --illegal-access=permit
+			        </argLine>
+			    </configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -178,11 +187,9 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.7.0</version>
+				<version>3.8.0</version>
 				<configuration>
-					<release>9</release>
-					<source>${maven.compiler.source}</source>
-					<target>${maven.compiler.target}</target>
+					<release>${maven.release.version}</release>
 					<encoding>${project.build.sourceEncoding}</encoding>
 				</configuration>
 				<dependencies>
@@ -221,14 +228,13 @@
 					<allowSnapshots>true</allowSnapshots>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.eluder.coveralls</groupId>
+					<artifactId>coveralls-maven-plugin</artifactId>
+					<version>4.3.0</version>
+			</plugin>
 		</plugins>
 	</build>
-	<!-- <profiles> <profile> <id>release-sign-artifacts</id> <activation> <property> 
-		<name>performRelease</name> <value>true</value> </property> </activation> 
-		<build> <plugins> <plugin> <groupId>org.apache.maven.plugins</groupId> <artifactId>maven-gpg-plugin</artifactId> 
-		<version>1.1</version> <executions> <execution> <id>sign-artifacts</id> <phase>verify</phase> 
-		<goals> <goal>sign</goal> </goals> </execution> </executions> </plugin> </plugins> 
-		</build> </profile> </profiles> -->
 	<dependencies>
 		<dependency>
 			<groupId>com.beust</groupId>
@@ -278,11 +284,6 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>com.sleepycat</groupId>
-			<artifactId>je</artifactId>
-			<version>5.0.103</version>
-		</dependency>
-		<dependency>
 			<groupId>org.aspectj</groupId>
 			<artifactId>aspectjrt</artifactId>
 			<version>1.8.10</version>
@@ -300,7 +301,7 @@
 		<dependency>
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-core</artifactId>
-			<version>2.8.47</version>
+			<version>2.23.4</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -364,8 +365,7 @@
 	</dependencies>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<maven.compiler.source>9</maven.compiler.source>
-		<maven.compiler.target>9</maven.compiler.target>
+		<maven.release.version>11</maven.release.version>
 		<slf4j.version>1.6.1</slf4j.version>
 	</properties>
 	<distributionManagement>
@@ -386,5 +386,5 @@
 		<module>bundles/sirix-rest-api</module>
 		<module>bundles/sirix-examples</module>
 	</modules>
-	<url>https://github.com/sirixdb/sirix</url>
+	<url>http://sirix.io</url>
 </project>
